force-app/main/default/objects/Study_Plan_Option__c/Study_Plan_Option__c.object-meta.xml
<CustomObject>
    <description>The available child study plans for a main study plan.</description>
    <label>Study Plan Option</label>
    <nameField>
        <displayFormat>SPO-{0000}</displayFormat>
        <label>Study Plan Option #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Study Plan Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>