force-app/main/default/objects/Study_Plan_Option__c/fields/Child_Study_Plan__c.field-meta.xml
<CustomField>
    <fullName>Child_Study_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Study Plan</label>
    <referenceTo>Study_Plan__c</referenceTo>
    <relationshipLabel>Study Plan Options (Master)</relationshipLabel>
    <relationshipName>Master_Study_Plan_Options</relationshipName>
    <type>Lookup</type>
</CustomField>