force-app/main/default/objects/Study_Plan_Option__c/fields/Clone_From_Id__c.field-meta.xml
<CustomField>
    <fullName>Clone_From_Id__c</fullName>
    <description>For program cloning wizard</description>
    <inlineHelpText>The original study plan option id</inlineHelpText>
    <label>Clone From Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>