force-app/main/default/objects/Study_Plan_Option__c/fields/Completion_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Completion_Requirement__c</fullName>
    <label>Completion Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Completion_Requirement</valueSetName>
    </valueSet>
</CustomField>