force-app/main/default/objects/Study_Plan_Option__c/fields/Master_Study_Plan__c.field-meta.xml
<CustomField>
    <fullName>Master_Study_Plan__c</fullName>
    <description>The master/parent study plan.</description>
    <label>Master Study Plan</label>
    <referenceTo>Study_Plan__c</referenceTo>
    <relationshipLabel>Study Plan Options (Child)</relationshipLabel>
    <relationshipName>Child_Study_Plan_Options</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>