force-app/main/default/objects/Study_Plan_Option__c/validationRules/Validate_Master_Child_Study_Plan_SPG.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Master_Child_Study_Plan_SPG</fullName>
    <active>true</active>
    <errorConditionFormula>Master_Study_Plan__r.Study_Program__c !=  Child_Study_Plan__r.Study_Program__c</errorConditionFormula>
    <errorMessage>The Master and Child Study Plan must belong to the same Study Program.</errorMessage>
</ValidationRule>