force-app/main/default/objects/Study_Plan_Option__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Master_Study_Plan__c</columns>
    <columns>Child_Study_Plan__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>